testCases/semanticAnalyzerTestCases/correct/staticArrayIndex.cs16
/*
    Author: Chris Kaebe
    Date: Feb 21, 2016
*/

int main(void){
    int x, y, z[5],a[x];

    x := -x;
    y := z[-3];
    a := z;
    z[3] := y;

}