testCases/semanticAnalyzerTestCases/error/staticArrayIndex.cs16
/*
    Author: Chris Kaebe
    Date: Feb 21, 2016
*/

int main(void){
    int x, y, z[5], a[x];
    
    x := -x;
    y := z[x];
    a := z;
    z[y] := y;
    
    return 0;
}